fix: Исправляет z-index, когда <header> наезжает на фильтры

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -12,7 +12,7 @@ body {
 	transition: 0.3s transform ease-in-out;
 	position: sticky;
 	top: 0;
-	z-index: 1;
+	z-index: 3;
 }
 
 .header--hidden {
